chore: add swagger ui + autogen config
