# src/routes/admin-routes.js
@@ -10,7 +10,7 @@ const {
 const corsOptions = {
   origin: "*", // allow all origins
   methods: ["GET", "POST"], // allow only GET and POST requests
-  allowedHeaders: ["Content-Type", "x-api-key"], // allow Content-Type and x-api-key headers
+  allowedHeaders: ["Content-Type", "profile_id", "x-api-key"], // allow Content-Type and x-api-key headers
 };
 
 adminRouter.use(cors(corsOptions));
